[ADM-3448] Fix z-index

--- a/src/app/catalog/checkout/checkout.component.scss
+++ b/src/app/catalog/checkout/checkout.component.scss
@@ -5,6 +5,7 @@ $offset: 7px;
 .back {
   color: $grey-900;
   position: absolute;
+  z-index: 1000;
   mat-icon {
     vertical-align: middle;
     margin-right: $spacing;
